add clase 5 - enrutamiento dinamico

--- a/05-enrutado-dinamico/package.json
+++ b/05-enrutado-dinamico/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "03-listadojugadores",
+  "name": "05-enrutado-dinamico",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
